[package]
name = "sibling"
version = "2.0.0-beta-7"
description = "get next/previous sibling directory name."
repository = "https://github.com/tamada/sibling"
homepage = "https://tamada.github.io/sibling"
readme = "README.md"
authors = [
    "Haruaki Tamada <tamada_f@ke_cafebabe.jp>"
]
license = "WTFL"
categories = ["command-line-utilities"]
edition = "2021"

[package.metadata.wix]
upgrade-guid = "D4DB88AD-BA23-4F88-A9B4-74C774EBEA37"
path-guid = "5A8D6CFE-2D9B-4F9E-80F2-439C0D9E43BC"
license = false
eula = false

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
rand = "0.8.5"
rust-embed = "8.5.0"

[build-dependencies]
clap = { version = "4.5.5", features = ["derive"] }
clap_complete = "4.5.38"
toml = "0.8.19"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.19.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell", "npm", "homebrew", "msi"]
# A GitHub repo to push Homebrew formulas to
tap = "tamada/homebrew-tap"
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# The archive format to use for windows builds (defaults .zip)
windows-archive = ".tar.gz"
# The archive format to use for non-windows builds (defaults .tar.xz)
unix-archive = ".tar.gz"
# A namespace to use when publishing this package to the npm registry
npm-scope = "@htamada"
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Publish jobs to run in CI
publish-jobs = ["homebrew"]
# Publish jobs to run in CI
pr-run-mode = "plan"
# Whether to install an updater program
install-updater = false
