[package]
name = "sibling"
readme = "README.md"
description = "The API for sibling (get next/previous sibling directory name)."
categories = ["command-line-utilities"]
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
rand = "0.9.0"
rust-embed = "8.5.0"
clap = { version = "4.5.23", features = ["derive"] }
